fix: design aesthetics: color, sizing, spacing

--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -4,14 +4,15 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
-	--background: oklch(1 0 0);
+	--background: #F7F5F3;
 	--foreground: oklch(0.145 0 0);
+	--primary: #37322F;
+	/* --primary-foreground: oklch(0.985 0 0); */
+	--primary-foreground: white;
 	--card: oklch(1 0 0);
 	--card-foreground: oklch(0.145 0 0);
 	--popover: oklch(1 0 0);
 	--popover-foreground: oklch(0.145 0 0);
-	--primary: oklch(0.205 0 0);
-	--primary-foreground: oklch(0.985 0 0);
 	--secondary: oklch(0.97 0 0);
 	--secondary-foreground: oklch(0.205 0 0);
 	--muted: oklch(0.97 0 0);
